css/masterefsaestyle.css
/* ... */
/*@media (max-width: 800px) {
.ftfe-body-header {
    background: url(../images/FTFE-header-vertical.png) no-repeat 0px 0px;
    background-size: contain;
    position: relative;
    width:45%;
    height:13vw;
    left:0;
    right:0;
    overflow: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    }
}*/
@media (max-width: 550px) {
.ftfe-body-header {
    background: url(../images/FTFE-header-vertical.png) no-repeat 0px 0px;
    background-size: contain;
    position: relative;
    width:60%;
    height:17vw;
    left:0;
    right:0;
    overflow: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 14px;
    }
}
.body-header-accent{
    opacity: 1;
    width: 75%;
    position: relative;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    height: 3px;
    background-color: #999;
}
/*
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
*/
/*Body*/
.home {
    position: relative;
    width: 100%;
    display: inline-block;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    padding-left: 2%;
    padding-right: 2%;
    margin-bottom: 2%;
    transition: opacity 500ms;
    visibility: visible;
    opacity: 1;
}
.home:target {
    visibility: visible;
    opacity: 1;
}
.home-grid img{
    -webkit-transition: all 300ms ease-in-out;
    -moz-transition: all 300ms ease-in-out;
    -o-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.home-grid:hover img {
    webkit-transform: scale(0.98);
    -ms-transform: scale(0.98);
    -o-transform: scale(0.98);
    transform: scale(0.98);
}
.center-image {
    width: 100%;
    max-width: 600px!important;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
}
.about {
    position: relative;
    display: inline-block;
    width: 100%;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    padding-left: 1%;
    padding-right: 1%;
    transition: opacity 500ms;
    visibility: visible;
    opacity: 1;
}
.about:target {
    visibility: visible;
    opacity: 1;
}
/*.about img{
    -webkit-transition: all 300ms ease-in-out;
    -moz-transition: all 300ms ease-in-out;
    -o-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.about:hover img {
    webkit-transform: scale(0.98);
    -ms-transform: scale(0.98);
    -o-transform: scale(0.98);
    transform: scale(0.98);
}*/
.about-text {
    text-align: justify;
    color: #999;
    width: 100%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    max-width: 600px;
}
.about-text-2 {
    text-align: justify;
    color: #999;
    width: 100%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
}
.about-half {
    float: left;
    width: 46%;
    margin-left: 2%;
    margin-right: 2%;
    margin-bottom: 30px;
    min-width: 300px;
    text-align: justify;
}
.equalholder { 
    float:left; 
    clear:left; 
    width:100%; 
    padding:0 0 2em; 
}
.equalheight1 {
    float:left;
}
.equalheight1 p {
    margin:.5em;
    padding:0;
}
@media (max-width: 880px) {
    .about-half {
        width:100%;
        margin-left:0;
        margin-right:0;
    }
    .equalheight1 p {
        margin:0;
        padding-left: 3%;
        padding-right: 3%;
        max-width: 600px;
        left: 0;
        right: 0;
        margin-left: auto;
        margin-right: auto;
        margin-top: -40px;
    }
}
@media (max-width: 450px) {
    .equalheight1 p {
        padding-right: 15px;
        padding-left: 15px;
    }
}
.body-header-2 {
    text-align: center;
    margin-top: 30px;
    margin-bottom: 20px;
    color: #fff;
    text-decoration: none!important;
}
.body-header-3 {
    text-align: center;
    margin-top: 20px;
    margin-bottom: 10px;
    /*color: rgb(163, 35, 0);*/
    color: #fff;
    text-decoration: none!important;
}
.header-link {
    text-decoration: none!important;
}
.header-link:hover {
    text-decoration: none!important;
    color: rgb(163, 35, 0);
}









/*
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
*/
/*popup*/
.overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.7);
  transition: opacity 500ms;
  visibility: hidden;
  opacity: 0;
}
.overlay:target {
  visibility: visible;
  opacity: 1;
}
.popup .close {
  position: absolute;
  top: 20px;
  right: 30px;
  transition: all 200ms;
  font-size: 30px;
  font-weight: bold;
  text-decoration: none;
  color: #FFF;
  opacity:1;
}
.popup .close:hover {
  color: rgb(163,35,0);
}
.popup .content {
  max-height: 30%;
  overflow: visible;
}
h1 {
   margin: 10px 0 0 0;
}
h4{
   margin: 0 0 20px 0;
}
/*
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
*/
/*Check in popup*/
#contact-form {
   background-color:rgba(50,50,50,1);
   padding: 10px 20px 15px 20px;
   max-width:100%;
   float: left;
   left: 50%;
   position: absolute;
   margin-top:30px;
   margin-left: -150.5px;
   border-radius:7px;
   -webkit-border-radius:7px;
   -moz-border-radius:7px;
}
/* ... */

